add some more info to composer files

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "name": "GameOfLife",
+    "type": "project",
     "description": "implementation of game of life",
     "keywords": [
         "game of life"
