--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,9 @@
     "autoload": {
         "psr-0": {"GameOfLife\\": "src/"}
     },
+    "require": {
+        "symfony/console": "2.4.*"
+    },    
     "require-dev": {
         "phpunit/phpunit": "3.7.*"
     }
