--- a/composer.json
+++ b/composer.json
@@ -16,9 +16,11 @@
         "psr-0": {"GameOfLife\\": "src/"}
     },
     "require": {
-        "symfony/console": "2.4.*"
+        "php": ">=5.3",
+        "symfony/console": "2.6.*"
     },    
     "require-dev": {
-        "phpunit/phpunit": "3.7.*"
+        "phpunit/phpunit": "4.4.*",
+        "codeclimate/php-test-reporter": "0.1.*@dev"
     }
 }
