--- a/.travis.yml
+++ b/.travis.yml
@@ -7,4 +7,10 @@ php:
   
 install: composer install --dev
 
-script: phpunit --configuration phpunit.xml.dist
+script:
+  - mkdir -p build/logs
+  - vendor/bin/phpunit --configuration phpunit.xml.dist
+
+after_script:
+  - vendor/bin/test-reporter
+  - php vendor/bin/coveralls -v
