--- a/composer.json
+++ b/composer.json
@@ -21,6 +21,6 @@
     },    
     "require-dev": {
         "phpunit/phpunit": "4.4.*",
-        "codeclimate/php-test-reporter": "0.1.*@dev"
+        "satooshi/php-coveralls": "dev-master"
     }
 }
