--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,13 +1,21 @@
 <phpunit
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-        xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/3.7/phpunit.xsd"
+        xsi:noNamespaceSchemaLocation="http://schema.phpunit.de/4.4/phpunit.xsd"
         bootstrap="vendor/autoload.php"
         colors="true"
         strict="true"
         verbose="true">
     <testsuites>
         <testsuite name="All tests">
-            <directory>test</directory>
+            <directory suffix="Test.php" phpVersion="5.3.0" phpVersionOperator=">=">./test/</directory>
         </testsuite>
     </testsuites>
+    <filter>
+        <whitelist processUncoveredFilesFromWhitelist="true">
+            <directory suffix=".php">./src/</directory>
+        </whitelist>
+    </filter>
+    <logging>
+        <log type="coverage-clover" target="build/logs/clover.xml"/>
+    </logging>
  </phpunit>
