--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -13,6 +13,9 @@
     <filter>
         <whitelist processUncoveredFilesFromWhitelist="true">
             <directory suffix=".php">./src/</directory>
+            <exclude>
+                <directory suffix=".php">./src/GameOfLife/GridGenerator/</directory>
+            </exclude>
         </whitelist>
     </filter>
     <logging>
