remove useless command

--- a/.travis.yml
+++ b/.travis.yml
@@ -12,5 +12,4 @@ script:
   - vendor/bin/phpunit --configuration phpunit.xml.dist
 
 after_script:
-  - vendor/bin/test-reporter
-  - php vendor/bin/coveralls -v
+  - vendor/bin/coveralls -v
