add phpmd, phpcs, phpcpd, pdepend for CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,12 +4,21 @@ php:
   - "5.5"
   - "5.4"
   - "5.3"
-  
+  - "hhvm"
+
+matrix:
+  allow_failures:
+    - php: hhvm
+
 install: composer install --dev
 
 script:
   - mkdir -p build/logs
   - vendor/bin/phpunit --configuration phpunit.xml.dist
+  # - vendor/bin/phpmd src xml build/config/phpmd.xml --reportfile build/logs/pmd.xml
+  # - vendor/bin/phpcs --report=checkstyle --report-file=build/logs/checkstyle.xml --standard=build/config/phpcs.xml src
+  - vendor/bin/phpcpd src
+  - vendor/bin/pdepend --summary-xml=build/logs/pdepend.xml src
 
 after_script:
   - vendor/bin/coveralls -v
