--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,10 @@
     },    
     "require-dev": {
         "phpunit/phpunit": "4.4.*",
-        "satooshi/php-coveralls": "dev-master"
+        "satooshi/php-coveralls": "dev-master",
+        "pdepend/pdepend" : "2.0.4",
+        "phpmd/phpmd" : "@stable",
+        "squizlabs/php_codesniffer": "2.*",
+        "sebastian/phpcpd": "2.0.*"
     }
 }
