--- a/.travis.yml
+++ b/.travis.yml
@@ -14,11 +14,14 @@ install: composer install --dev
 
 script:
   - mkdir -p build/logs
+  - mkdir -p build/api
   - vendor/bin/phpunit --configuration phpunit.xml.dist
   - vendor/bin/phpmd src xml build/config/phpmd.xml --reportfile build/logs/pmd.xml
   # - vendor/bin/phpcs --report=checkstyle --report-file=build/logs/checkstyle.xml --standard=build/config/phpcs.xml src
   - vendor/bin/phpcpd src
   - vendor/bin/pdepend --summary-xml=build/logs/pdepend.xml src
+  - vendor/bin/phpdoc run -d src -t build/api
+  - vendor/bin/phploc --log-csv build/logs/phploc.csv --progress src
 
 after_script:
   - vendor/bin/coveralls -v
