--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,8 @@
         "pdepend/pdepend" : "2.0.4",
         "phpmd/phpmd" : "@stable",
         "squizlabs/php_codesniffer": "2.*",
-        "sebastian/phpcpd": "2.0.*"
+        "sebastian/phpcpd": "2.0.*",
+        "phpdocumentor/phpdocumentor": "2.7.*",
+        "phploc/phploc": "2.*"
     }
 }
