--- a/composer.json
+++ b/composer.json
@@ -29,6 +29,8 @@
         "squizlabs/php_codesniffer": "2.*",
         "sebastian/phpcpd": "2.0.*",
         "phpdocumentor/phpdocumentor": "2.7.*",
-        "phploc/phploc": "2.*"
+        "phploc/phploc": "2.*",
+        "phing/phing": "2.*",
+        "mayflower/php-codebrowser": "1.*"
     }
 }
