--- a/.travis.yml
+++ b/.travis.yml
@@ -10,10 +10,12 @@ matrix:
   allow_failures:
     - php: hhvm
 
-install: composer install --dev
+install:
+  - composer self-update
+  - composer install
 
 script:
-  - vendor/bin/phing
+  - vendor/bin/phing build
 #  - mkdir -p build/logs
 #  - mkdir -p build/api
 #  - mkdir -p build/code-browser
