--- a/build.xml
+++ b/build.xml
@@ -40,43 +40,43 @@
 
 
     <target name="phpcb" description="Aggregate tool output with PHP_CodeBrowser">
-        <exec logoutput="true" checkreturn="true"
+        <exec logoutput="true" checkreturn="true" passthru="true"
               command="${vendor.bin}phpcb --log ${logs.dir} --source ${src.dir} --output ${code-browser.dir}" />
     </target>
 
     <target name="phpunit" description="Run unit tests using PHPUnit and generates junit.xml and clover.xml">
-        <exec logoutput="true" checkreturn="true"
+        <exec logoutput="true" checkreturn="true" passthru="true"
               command="${vendor.bin}phpunit --configuration ${base.dir}/phpunit.xml.dist --log-junit ${logs.dir}phpunit.junit.xml --coverage-clover ${logs.dir}phpunit.coverage.xml --coverage-html ${coverage.dir}coverage " />
     </target>
 
 
     <target name="pdepend" description="Generate jdepend.xml and software metrics charts using PHP_Depend">
-        <exec logoutput="true" checkreturn="true"
+        <exec logoutput="true" checkreturn="true" passthru="true"
               command="${vendor.bin}pdepend --jdepend-xml=${logs.dir}jdepend.xml --jdepend-chart=${pdepend.dir}dependencies.svg --overview-pyramid=${pdepend.dir}overview-pyramid.svg ${src.dir}" />
     </target>
 
     <target name="phpmd" description="Generate pmd.xml using PHPMD">
-        <exec logoutput="true" spawn="true" checkreturn="true"
+        <exec logoutput="true" checkreturn="true" passthru="true"
               command="${vendor.bin}phpmd ${src.dir} xml ${build.dir}/config/phpmd.xml --reportfile ${logs.dir}pmd.xml" />
     </target>
 
     <target name="phpcpd" description="Generate pmd-cpd.xml using PHPCPD">
-        <exec logoutput="true" checkreturn="true"
+        <exec logoutput="true" checkreturn="true" passthru="true"
               command="${vendor.bin}phpcpd --log-pmd ${logs.dir}pmd-cpd.xml ${src.dir}" />
     </target>
 
     <target name="phploc" description="Generate phploc.csv">
-        <exec logoutput="true" checkreturn="true"
+        <exec logoutput="true" checkreturn="true" passthru="true"
               command="${vendor.bin}phploc --log-csv ${logs.dir}phploc.csv --progress ${src.dir}" />
     </target>
 
     <target name="phpcs" description="Generate checkstyle.xml using PHP_CodeSniffer">
-        <exec logoutput="true" checkreturn="true"
+        <exec logoutput="true" checkreturn="true" passthru="true"
               command="${vendor.bin}phpcs --report=checkstyle --report-file=${logs.dir}checkstyle.xml --standard=${build.dir}/config/phpcs.xml ${src.dir}" />
     </target>
 
     <target name="phpdoc" description="Generate API documentation using APIGen">
-        <exec logoutput="true" checkreturn="true"
+        <exec logoutput="true" checkreturn="true" passthru="true"
               command="${vendor.bin}phpdoc run -d ${src.dir} -t ${build.dir}api" />
     </target>    
     
