--- a/build.xml
+++ b/build.xml
@@ -14,7 +14,7 @@
     <property name="coverage.dir" value="${base.dir}/build/coverage/"/>
 
 
-    <target name="build" depends="clean,phpunit,pdepend,phpmd,phpcpd,phploc,phpcs,phpcs-test,phpdoc,phpcb">
+    <target name="build" depends="clean,lint,phpunit,pdepend,phpmd,phpcpd,phploc,phpcs,phpcs-test,phpdoc,phpcb">
         <echo msg="Building done" />
     </target>
 
@@ -46,7 +46,7 @@
 
     <target name="phpunit" description="Run unit tests using PHPUnit and generates junit.xml and clover.xml">
         <exec logoutput="true" checkreturn="true" passthru="true"
-              command="${vendor.bin}phpunit --configuration ${base.dir}/phpunit.xml.dist --log-junit ${logs.dir}phpunit.junit.xml --coverage-clover ${logs.dir}phpunit.coverage.xml --coverage-html ${coverage.dir}coverage " />
+              command="${vendor.bin}phpunit --configuration ${base.dir}/phpunit.xml.dist --log-junit ${logs.dir}phpunit.junit.xml --coverage-clover ${logs.dir}clover.xml --coverage-html ${coverage.dir}coverage " />
     </target>
 
 
@@ -83,6 +83,20 @@
     <target name="phpdoc" description="Generate API documentation using APIGen">
         <exec logoutput="true" checkreturn="true" passthru="true"
               command="${vendor.bin}phpdoc run -d ${src.dir} -t ${build.dir}api" />
-    </target>    
+    </target>
+
+    <target name="lint" description="Perform syntax check of sourcecode files">
+        <phplint haltonfailure="true">
+            <fileset dir="src">
+                <include name="**/*.php"/>
+            </fileset>
+            <fileset dir="test">
+                <include name="**/*.php"/>
+            </fileset>
+            <fileset dir="bin">
+                <include name="**/*.php"/>
+            </fileset>
+        </phplint>
+    </target>
     
 </project>
