--- a/.travis.yml
+++ b/.travis.yml
@@ -12,7 +12,7 @@ matrix:
 
 install:
   - composer self-update
-  - composer install
+  - composer install --no-interaction
 
 script:
   - vendor/bin/phing build
