--- a/build.xml
+++ b/build.xml
@@ -46,7 +46,7 @@
 
     <target name="phpunit" description="Run unit tests using PHPUnit and generates junit.xml and clover.xml">
         <exec logoutput="true" checkreturn="true" passthru="true"
-              command="${vendor.bin}phpunit --configuration ${base.dir}/phpunit.xml.dist --log-junit ${logs.dir}phpunit.junit.xml --coverage-clover ${logs.dir}clover.xml --coverage-html ${coverage.dir}coverage " />
+              command="${vendor.bin}phpunit --configuration ${base.dir}/phpunit.xml.dist --log-junit ${logs.dir}phpunit.junit.xml --coverage-clover ${logs.dir}clover.xml --coverage-html ${coverage.dir} " />
     </target>
 
 
