--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
     },
     "require": {
         "php": ">=5.3",
-        "symfony/console": "2.6.*"
+        "symfony/console": "2.6.*",
+        "symfony/finder": "2.*"
     },    
     "require-dev": {
         "phpunit/phpunit": "4.4.*",
