--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,7 @@
     },    
     "require-dev": {
         "phpunit/phpunit": "4.4.*",
-        "satooshi/php-coveralls": "dev-master",
+        "satooshi/php-coveralls": "0.*",
         "pdepend/pdepend" : "2.0.4",
         "phpmd/phpmd" : "@stable",
         "squizlabs/php_codesniffer": "2.*",
@@ -32,6 +32,7 @@
         "phpdocumentor/phpdocumentor": "2.7.*",
         "phploc/phploc": "2.*",
         "phing/phing": "2.*",
-        "mayflower/php-codebrowser": "1.*"
+        "mayflower/php-codebrowser": "1.*",
+        "codeclimate/php-test-reporter": "0.*"
     }
 }
