--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
     "require": {
         "php": ">=5.3",
         "symfony/console": "2.6.*",
-        "symfony/finder": "2.*"
+        "symfony/finder": "2.*",
+        "symfony/dependency-injection" : "2.*"
     },    
     "require-dev": {
         "phpunit/phpunit": "4.4.*",
