remove .idea from gitignore as this is user specific file, give a valid package name in composer json

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "GameOfLife",
+    "name": "vladislav-ciobanu/game-of-life",
     "type": "project",
     "description": "implementation of game of life",
     "keywords": [
