--- a/composer.json
+++ b/composer.json
@@ -26,11 +26,11 @@
     "require-dev": {
         "phpunit/phpunit": "4.4.*",
         "satooshi/php-coveralls": "0.*",
-        "pdepend/pdepend" : "2.0.4",
+        "pdepend/pdepend" : "2.*",
         "phpmd/phpmd" : "@stable",
         "squizlabs/php_codesniffer": "2.*",
-        "sebastian/phpcpd": "2.0.*",
-        "phpdocumentor/phpdocumentor": "2.7.*",
+        "sebastian/phpcpd": "2.*",
+        "phpdocumentor/phpdocumentor": "2.*",
         "phploc/phploc": "2.*",
         "phing/phing": "2.*",
         "mayflower/php-codebrowser": "1.*",
